syntax = "proto3";

package grpc_adm;
option go_package = "github.com/lemon-cloud-service/lemon-cloud-dashboard/lemon-cloud-dashboard-common/grpc_adm";

import "google/protobuf/empty.proto";

message ServiceManagementModuleDto {
    string module_name = 1;
    string module_key = 2;
    string module_introduce = 3;
    string module_icon_url = 4;
    string index_url = 5;
}

message ServiceBaseInfoDto {
    // 这部分是从注册中心中读取到的其他服务信息
    string service_key = 1;
    string service_name = 2;
    string service_introduce = 3;
    // 以下是dashboard服务根据下载到的服务UI模块检索生成的
    string service_icon_url = 51;
    repeated ServiceManagementModuleDto management_module_list = 52;
}

message ServiceApplicationInfoDto {
    string application_version = 1;
    uint32 application_version_num = 2;
}

message ServiceInstanceInfoDto {
    string endpoint_host = 1;
    uint32 endpoint_port = 2;
    ServiceApplicationInfoDto application_info = 3;
}

message ServiceBaseInfoListDto {
    repeated ServiceBaseInfoDto all_service_base_info_list = 1;
}

message ServiceInstanceInfoListDto {
    repeated ServiceInstanceInfoDto all_service_instance_info_list = 1;
}

service ServiceService {
    rpc GetMyServiceBaseInfoList (google.protobuf.Empty) returns (ServiceBaseInfoListDto) {
    }
    rpc GetMyServiceInstanceInfoList (google.protobuf.Empty) returns (ServiceInstanceInfoListDto) {
    }
}