syntax = "proto3";

package adm_service;
option go_package = "github.com/lemon-cloud-service/lemon-cloud-dashboard/lemon-cloud-dashboard-common/adm_service";

import "google/protobuf/empty.proto";
import "grpc/adm_dto/service.proto";

service ServiceService {
    rpc GetMyServiceList (google.protobuf.Empty) returns (adm_dto.AllServiceStatusDto) {
    }
}